tests/baselines/reference/breakTarget6.errors.txt
breakTarget6.ts(2,3): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.


==== breakTarget6.ts (1 errors) ====
    while (true) {
      break target;
      ~~~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    }